--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,3 +19,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/battery.min.lua
+    - assets/camera.min.lua
+    - assets/data.min.lua
+    - assets/frame_app.min.lua
