--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: frame_vision
+name: frame_vision_textrecognition
 description: "Foundation for Frame Vision apps. Takes repeated snapshots and feeds into a machine vision pipeline."
 publish_to: 'none'
 version: 0.1.0
