--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,12 +25,12 @@ if (flutterVersionName == null) {
 
 android {
     namespace = "com.example.frame_vision_textrecognition"
-    compileSdk = 34 // for google_mlkit_text_recognition
+    compileSdk = 34 // for google_mlkit_text_recognition, share_plus
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     defaultConfig {
