--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_mlkit_text_recognition: ^0.13.0
+  google_mlkit_translation: ^0.11.0
   image: ^4.3.0
   image_mlkit_converter: ^0.0.1
   logging: ^1.2.0
